--- a/.github/workflows/deploy-splunk-apps.yml
+++ b/.github/workflows/deploy-splunk-apps.yml
@@ -48,7 +48,7 @@ jobs:
           echo "=== Reloading Splunk app configs ==="
           for app in $APPS; do
             echo "Reloading $app"
-            /usr/bin/sudo docker exec splunk3 curl -s -k -u admin:${SPLUNK_PASSWORD} \
+            /usr/bin/sudo docker exec splunk curl -s -k -u admin:${SPLUNK_PASSWORD} \
               -X POST "https://localhost:8089/services/apps/local/${app}/_reload" > /dev/null || echo "Warning: Could not reload $app (may not be installed yet)"
           done
 
