Add build number verification to deployment workflow
- Use github.run_number as build number
- Update build number in app.conf during deployment
- Verify deployment via Splunk REST API
- Show verification results in workflow logs
- Add PR comments with build info for build environment
- Generate deployment summary for dev environment

--- a/.github/workflows/deploy-splunk-apps.yml
+++ b/.github/workflows/deploy-splunk-apps.yml
@@ -35,6 +35,8 @@ jobs:
       - name: Deploy to Build Splunk
         env:
           SPLUNK_PASSWORD: ${{ secrets.SPLUNK_ADMIN_PASSWORD }}
+          BUILD_NUMBER: ${{ github.run_number }}
+          COMMIT_SHA: ${{ github.sha }}
         run: |
           set -e
           cd /root/apps
@@ -42,6 +44,8 @@ jobs:
           echo "=== Deploying to BUILD environment ==="
           echo "PR: #${{ github.event.pull_request.number || 'N/A' }}"
           echo "Branch: ${{ github.head_ref || github.ref_name }}"
+          echo "Build Number: ${BUILD_NUMBER}"
+          echo "Commit: ${COMMIT_SHA:0:7}"
 
           echo "=== Fixing permissions for git ==="
           /usr/bin/sudo chown -R $(whoami):$(whoami) . 2>/dev/null || true
@@ -62,6 +66,21 @@ jobs:
           echo "Found apps:"
           echo "$APPS"
 
+          echo "=== Updating build numbers in app.conf ==="
+          for app in $APPS; do
+            APP_CONF="$app/default/app.conf"
+            if [ -f "$APP_CONF" ]; then
+              # Update build number
+              if grep -q "^build" "$APP_CONF"; then
+                sed -i "s/^build.*/build = ${BUILD_NUMBER}/" "$APP_CONF"
+              else
+                # Add build number after [install] section
+                sed -i "/^\[install\]/a build = ${BUILD_NUMBER}" "$APP_CONF"
+              fi
+              echo "Updated $app build number to ${BUILD_NUMBER}"
+            fi
+          done
+
           echo "=== Setting Splunk permissions ==="
           for app in $APPS; do
             /usr/bin/sudo chown -R 41812:41812 "$app" 2>/dev/null || true
@@ -74,6 +93,26 @@ jobs:
               -X POST "https://localhost:8089/services/apps/local/${app}/_reload" > /dev/null || echo "Warning: Could not reload $app"
           done
 
+          echo "=== Verifying build numbers ==="
+          sleep 2
+          FAILED=0
+          for app in $APPS; do
+            DEPLOYED_BUILD=$(/usr/bin/sudo docker exec splunk curl -s -k -u admin:${SPLUNK_PASSWORD} \
+              "https://localhost:8089/services/apps/local/${app}?output_mode=json" | \
+              python3 -c "import sys,json; d=json.load(sys.stdin); print(d['entry'][0]['content'].get('build','unknown'))" 2>/dev/null || echo "unknown")
+
+            if [ "$DEPLOYED_BUILD" = "${BUILD_NUMBER}" ]; then
+              echo "✅ $app: Build ${DEPLOYED_BUILD} verified"
+            else
+              echo "❌ $app: Expected build ${BUILD_NUMBER}, got ${DEPLOYED_BUILD}"
+              FAILED=1
+            fi
+          done
+
+          if [ $FAILED -eq 1 ]; then
+            echo "::warning::Some apps may not have updated correctly"
+          fi
+
           echo "=== Build deployment complete ==="
 
       - name: Comment on PR
@@ -85,8 +124,10 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: `## 🚀 Deployed to Build Environment\n\n**Splunk Build URL:** http://192.168.71.147:8000\n\n**Apps deployed:**\n- SA-cost-governance\n- SA-pii-detection\n- TA-governance-test-searches\n- TA-schedule-builder\n- TA-splunk_diagnostic\n- TA-user-governance\n\nPlease test your changes before merging.`
+              body: `## 🚀 Deployed to Build Environment\n\n**Build Number:** ${process.env.BUILD_NUMBER}\n**Commit:** \`${{ github.sha }}\`\n\n**Splunk Build URL:** http://192.168.71.147:8000\n\n**Verify deployment:**\n\`\`\`bash\ncurl -sk -u admin:PASSWORD "https://192.168.71.147:8089/services/apps/local/SA-pii-detection?output_mode=json" | jq '.entry[0].content.build'\n\`\`\`\n\nPlease test your changes before merging.`
             })
+        env:
+          BUILD_NUMBER: ${{ github.run_number }}
 
   # Deploy to Dev environment when PR is merged to main
   deploy-to-dev:
@@ -98,12 +139,15 @@ jobs:
       - name: Deploy to Dev Splunk
         env:
           SPLUNK_PASSWORD: ${{ secrets.SPLUNK_ADMIN_PASSWORD }}
+          BUILD_NUMBER: ${{ github.run_number }}
+          COMMIT_SHA: ${{ github.sha }}
         run: |
           set -e
           cd /root/apps
 
           echo "=== Deploying to DEV environment ==="
-          echo "Commit: ${{ github.sha }}"
+          echo "Build Number: ${BUILD_NUMBER}"
+          echo "Commit: ${COMMIT_SHA:0:7}"
 
           echo "=== Fixing permissions for git pull ==="
           /usr/bin/sudo chown -R $(whoami):$(whoami) . 2>/dev/null || true
@@ -124,6 +168,20 @@ jobs:
           echo "Found apps:"
           echo "$APPS"
 
+          echo "=== Updating build numbers in app.conf ==="
+          for app in $APPS; do
+            APP_CONF="$app/default/app.conf"
+            if [ -f "$APP_CONF" ]; then
+              # Update build number
+              if grep -q "^build" "$APP_CONF"; then
+                sed -i "s/^build.*/build = ${BUILD_NUMBER}/" "$APP_CONF"
+              else
+                sed -i "/^\[install\]/a build = ${BUILD_NUMBER}" "$APP_CONF"
+              fi
+              echo "Updated $app build number to ${BUILD_NUMBER}"
+            fi
+          done
+
           echo "=== Setting Splunk permissions ==="
           for app in $APPS; do
             /usr/bin/sudo chown -R 41812:41812 "$app" 2>/dev/null || true
@@ -136,20 +194,51 @@ jobs:
               -X POST "https://localhost:8089/services/apps/local/${app}/_reload" > /dev/null || echo "Warning: Could not reload $app"
           done
 
+          echo "=== Verifying build numbers ==="
+          sleep 2
+          FAILED=0
+          for app in $APPS; do
+            DEPLOYED_BUILD=$(/usr/bin/sudo docker exec splunk curl -s -k -u admin:${SPLUNK_PASSWORD} \
+              "https://localhost:8089/services/apps/local/${app}?output_mode=json" | \
+              python3 -c "import sys,json; d=json.load(sys.stdin); print(d['entry'][0]['content'].get('build','unknown'))" 2>/dev/null || echo "unknown")
+
+            if [ "$DEPLOYED_BUILD" = "${BUILD_NUMBER}" ]; then
+              echo "✅ $app: Build ${DEPLOYED_BUILD} verified"
+            else
+              echo "❌ $app: Expected build ${BUILD_NUMBER}, got ${DEPLOYED_BUILD}"
+              FAILED=1
+            fi
+          done
+
+          if [ $FAILED -eq 1 ]; then
+            echo "::warning::Some apps may not have updated correctly"
+          fi
+
           echo "=== Dev deployment complete ==="
 
       - name: Generate deployment summary
+        env:
+          BUILD_NUMBER: ${{ github.run_number }}
         run: |
           cd /root/apps
           APPS=$(find . -maxdepth 1 -type d \( -name "SA-*" -o -name "TA-*" \) | sed 's|^\./||' | sort)
 
           echo "## ✅ Deployed to Dev Environment" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
+          echo "**Build Number:** ${BUILD_NUMBER}" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
           echo "**Splunk Dev URL:** http://192.168.71.199:8000" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "**Commit:** \`${{ github.sha }}\`" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "### Apps Updated:" >> $GITHUB_STEP_SUMMARY
+          echo "| App | Build |" >> $GITHUB_STEP_SUMMARY
+          echo "|-----|-------|" >> $GITHUB_STEP_SUMMARY
           for app in $APPS; do
-            echo "- $app" >> $GITHUB_STEP_SUMMARY
+            echo "| $app | ${BUILD_NUMBER} |" >> $GITHUB_STEP_SUMMARY
           done
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "### Verify Deployment:" >> $GITHUB_STEP_SUMMARY
+          echo "\`\`\`bash" >> $GITHUB_STEP_SUMMARY
+          echo "curl -sk -u admin:PASSWORD 'https://192.168.71.199:8089/services/apps/local/SA-pii-detection?output_mode=json' | jq '.entry[0].content.build'" >> $GITHUB_STEP_SUMMARY
+          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
