--- a/.github/workflows/deploy-splunk-apps.yml
+++ b/.github/workflows/deploy-splunk-apps.yml
@@ -24,6 +24,11 @@ on:
           - build
           - dev
 
+permissions:
+  contents: read
+  pull-requests: write
+  issues: write
+
 jobs:
   # Deploy PRs to Build environment for testing
   deploy-to-build:
